完成Nuxt.js：异步数据

--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "shine-nuxt",
+  "name": "shine-nuxt2",
   "version": "1.0.0",
-  "description": "my Nuxt.js project",
+  "description": "My fantabulous Nuxt.js project",
   "author": "shine130",
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "dev-server": "./node_modules/.bin/json-server --watch assets/db.json --port 3333",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "bootstrap": "^4.1.3"
+    "cross-env": "^5.2.0",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
+    "json-server": "^0.14.2",
     "nodemon": "^1.18.9"
   }
 }
